[package]
name = "tree-sitter-bteq"
description = "grammar for BTEQ/SQL"
version = "0.1.0"
authors = ["aamayam <alan.amayamtz@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "bteq"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/aamayam/tree-sitter-bteq"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.3"
